--- a/Pipfile
+++ b/Pipfile
@@ -11,5 +11,6 @@ django = "*"
 [requires]
 python_version = "3.9"
 
-[seems like this is a comment]
-[DEPLOYED pythonAnywhere: python_version = "3.8"]
+# https://stackoverflow.com/questions/9159757/can-i-add-comments-to-a-pip-requirements-file
+# seems like this is a comment
+# DEPLOYED pythonAnywhere: python_version = "3.8"
