--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ db.sqlite3
 Pipfile*
 Pipfile
 Pipfile.lock
+# settings.py # Only on deployed copy
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
