--- a/Pipfile
+++ b/Pipfile
@@ -5,12 +5,13 @@ name = "pypi"
 
 [packages]
 django = "*"
+django-on-heroku = "*"
+gunicorn = "*"
 
 [dev-packages]
 
 [requires]
 python_version = "3.9"
-
 # https://stackoverflow.com/questions/9159757/can-i-add-comments-to-a-pip-requirements-file
 # seems like this is a comment
 # DEPLOYED pythonAnywhere: python_version = "3.8"
