--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django = "*"
 django-on-heroku = "*"
 gunicorn = "*"
+# DEPLOYED heroku above two: django-on-heroku, gunicorn
 
 [dev-packages]
 
@@ -14,4 +15,4 @@ gunicorn = "*"
 python_version = "3.9"
 # https://stackoverflow.com/questions/9159757/can-i-add-comments-to-a-pip-requirements-file
 # seems like this is a comment
-# DEPLOYED pythonAnywhere: python_version = "3.8"
+# DEPLOYED PythonAnywhere: python_version = "3.8"
